# self_study_project

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
self_study/: admin.py  apps.py  models.py  paginators.py  tests.py  urls.py
self_study/migrations/: 0001_initial.py  0002_initial.py  0003_materialstest.py  0004_materials_material_test.py  0005_materialstest_user.py
self_study/serializers/: materials.py  materials_test.py  section.py
self_study/views/: materials.py  materials_test.py  section.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
